Add final modifications from lesson 4

--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -64,3 +64,34 @@ table {
 	padding-right: 30px;
 	width: 960px;
 }
+
+/*
+	Typography
+*/
+
+h1, h3, h4, h5, p {
+	margin-bottom: 22px;
+}
+
+/*
+	Buttons
+*/
+
+.btn {
+	border-radius: 5px;
+	display: inline-block;
+	margin: 0;
+}
+
+.btn-alt {
+	border: 1px solid #dfe2e5;
+	padding: 10px 30px;
+}
+
+/* 
+	Home
+*/
+
+.hero {
+	padding: 22px 80px 66px 80px;
+}
