--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -58,11 +58,15 @@ table {
 	box-sizing: border-box;
 }
 
-.container {
+.container,
+.grid {
 	margin: 0 auto;
+	width: 960px;
+}
+
+.container {
 	padding-left: 30px;
 	padding-right: 30px;
-	width: 960px;
 }
 
 /*
@@ -95,3 +99,67 @@ h1, h3, h4, h5, p {
 .hero {
 	padding: 22px 80px 66px 80px;
 }
+
+/*
+	Clearfix
+*/
+
+.group:before,
+.group:after {
+	content: "";
+	display: table;
+}
+
+.group:after {
+	clear: both;
+}
+
+.group {
+	clear: both;
+	*zoom: 1;
+}
+
+/*
+	Primary Header
+*/
+
+.logo {
+	border-top: 4px solid #648880;
+	padding: 40px 0 22px 0;
+	float: left;
+}
+
+/* 
+	Primary Footer
+*/
+
+.primary-footer {
+	padding-bottom: 44px;
+	padding-top: 44px;
+}
+
+.primary-footer small {
+	float: left;
+}
+
+.col-1-3 {
+	width: 33.33%;
+}
+
+.col-2-3 {
+	width: 66.66%;
+}
+
+.col-1-3,
+.col-2-3 {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
