Update demo site with code from Lesson 6

--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -47,6 +47,16 @@ table {
 }
 
 /*
+	Custom Styles
+*/
+
+body {
+	color: #888;
+	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
+/*
 	Grid
 */
 
@@ -77,6 +87,60 @@ h1, h3, h4, h5, p {
 	margin-bottom: 22px;
 }
 
+h1, h2, h3, h4 {
+	color: #648880;
+}
+
+h1 {
+	font-size: 36px;
+	line-height: 44px;
+}
+
+h2 {
+	font-size: 24px;
+	line-height: 44px;
+}
+
+h3 {
+	font-size: 21px;
+}
+
+h4 {
+	font-size: 18px;
+}
+
+h5 {
+	color: #a9b2b9;
+	font-size: 14px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+strong {
+	font-weight: 400;
+}
+
+cite, em {
+	font-style: italic;
+}
+
+/* 
+	Links
+*/
+
+a {
+	color: #648880;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #a9b2b9;
+}
+
+p a {
+	border-bottom: 1px solid #dfe2e5;
+}
+
 /*
 	Buttons
 */
@@ -97,7 +161,22 @@ h1, h3, h4, h5, p {
 */
 
 .hero {
+	line-height: 44px;
 	padding: 22px 80px 66px 80px;
+	text-align: center;
+}
+
+.hero h2 {
+	font-size: 36px;
+}
+
+.hero p {
+	font-size: 24px;
+	font-weight: 100;
+}
+
+.teaser a:hover h3 {
+	color: #a9b2b9;
 }
 
 /*
@@ -125,8 +204,33 @@ h1, h3, h4, h5, p {
 
 .logo {
 	border-top: 4px solid #648880;
-	padding: 40px 0 22px 0;
 	float: left;
+	font-size: 48px;
+	font-weight: 100;
+	line-height: 44px;
+	letter-spacing: .5px;
+	padding: 40px 0 22px 0;
+	text-transform: uppercase;
+}
+
+.tagline {
+	margin: 66px 0 22px 0;
+	text-align: right;
+}
+
+.primary-nav {
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: .5px;
+	text-transform: uppercase;
+}
+
+/* 
+	Navigation
+*/
+
+.nav {
+	text-align: right;
 }
 
 /* 
@@ -134,12 +238,15 @@ h1, h3, h4, h5, p {
 */
 
 .primary-footer {
+	color: #648880;
+	font-size: 14px;
 	padding-bottom: 44px;
 	padding-top: 44px;
 }
 
 .primary-footer small {
 	float: left;
+	font-weight: 400;
 }
 
 .col-1-3 {
