--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -51,6 +51,7 @@ table {
 */
 
 body {
+	background: #293f50;
 	color: #888;
 	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -141,19 +142,39 @@ p a {
 	border-bottom: 1px solid #dfe2e5;
 }
 
+.primary-header a,
+.primary-footer a {
+	color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+	color: #648880;
+}
+
 /*
 	Buttons
 */
 
 .btn {
 	border-radius: 5px;
+	color: #fff;
+	cursor: pointer;
 	display: inline-block;
+	font-weight: 400;
+	letter-spacing: .5px;
 	margin: 0;
+	text-transform: uppercase;
 }
 
 .btn-alt {
-	border: 1px solid #dfe2e5;
+	border: 1px solid #fff;
 	padding: 10px 30px;
+}
+
+.btn-alt:hover {
+	background: #fff;
+	color: #648880;
 }
 
 /* 
@@ -161,6 +182,7 @@ p a {
 */
 
 .hero {
+	color: #fff;
 	line-height: 44px;
 	padding: 22px 80px 66px 80px;
 	text-align: center;
@@ -198,6 +220,28 @@ p a {
 	*zoom: 1;
 }
 
+/* 
+	Rows
+*/
+
+.row,
+.row-alt {
+	min-width: 960px;
+}
+
+.row {
+	background: #fff;
+	padding: 66px 0 44px 0;
+}
+
+.row-alt {
+	background: #cbe2c1;
+	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+	padding: 44px 0 22px 0;
+}
+
 /*
 	Primary Header
 */
@@ -231,6 +275,20 @@ p a {
 
 .nav {
 	text-align: right;
+}
+
+
+/*
+	Leads
+*/
+
+.lead {
+	text-align: center;
+}
+
+.lead p {
+	font-size: 21px;
+	line-height: 33px;
 }
 
 /* 
