Update demo site with lesson 8 code

--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -277,6 +277,15 @@ p a {
 	text-align: right;
 }
 
+.nav li {
+	display: inline-block;
+	margin: 0 10px;
+	vertical-align: top;
+}
+
+.nav li:last-child {
+	margin-right: 0;
+}
 
 /*
 	Leads
@@ -289,6 +298,23 @@ p a {
 .lead p {
 	font-size: 21px;
 	line-height: 33px;
+}
+
+
+/* 
+	Speakers
+*/
+
+.speaker-info {
+	border: 1px solid #dfe2e5;
+	border-radius: 5px;
+	margin-top: 88px;
+	padding: 22px 0;
+	text-align: center;
+}
+
+.speaker {
+	margin-bottom: 44px;
 }
 
 /* 
