--- a/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
+++ b/courses/learn_to_code_HTML_and_CSS/styles-conference/assets/stylesheets/main.css
@@ -201,6 +201,13 @@ p a {
 	color: #a9b2b9;
 }
 
+.teaser img {
+	border-radius: 5px;
+	display: block;
+	margin-bottom: 22px;
+	max-width: 100%;
+}
+
 /*
 	Clearfix
 */
@@ -309,12 +316,35 @@ p a {
 	border: 1px solid #dfe2e5;
 	border-radius: 5px;
 	margin-top: 88px;
-	padding: 22px 0;
+	padding-bottom: 22px;
 	text-align: center;
 }
 
 .speaker {
 	margin-bottom: 44px;
+}
+
+.speaker-info img {
+	border-radius: 50%;
+	height: 130px;
+	margin: -66px 0 22px 0;
+	vertical-align: top;
+}
+
+/*
+	Venue
+*/
+
+.venue-theatre {
+	margin-bottom: 66px;
+}
+
+.venue-hotel {
+	margin-bottom: 22px;
+}
+
+.venue-map {
+	height: 264px;
 }
 
 /* 
@@ -353,4 +383,3 @@ p a {
 	padding-left: 15px;
 	padding-right: 15px;
 }
-
